--- a/BottleCap.vcxproj
+++ b/BottleCap.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Protocol.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
