--- a/BottleCap.vcxproj
+++ b/BottleCap.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PrevDialog.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -206,6 +207,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PrevDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BottleCap.rc" />
@@ -214,7 +216,9 @@
     <None Include="res\BottleCap.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\Desktop\find.ico" />
     <Image Include="res\BottleCap.ico" />
+    <Image Include="res\icon1.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
